<resources>
    <string name="app_name">IecProject</string>
    <string name="register">Cadastrar</string>[
    <string name="next">Próximo</string>
    <string name="back">Anterior</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="connect">Mantenha-me conectado</string>
    <string name="new_account">Criar uma conta</string>
    <string name="nickname">Apelido</string>
    <string name="send">Enviar</string>
    <string name="type_message">Digite aqui...</string>
    <string name="title_activity_initial_screen">InitialScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="at">&#64;username</string>
    <string name="logout">Sair</string>
    <string name="talk">Conversar</string>
    <string name="find_devices">Buscar Dispositivos Disponíveis</string>
    <string name="paired_devices">Dispositivos Pareados</string>
    <string name="find">Buscar Dispositivos</string>


</resources>
